objects/Ecom_Coupon_Product__c.object
<CustomObject>
    <fields>
        <fullName>Ecom_Coupon_Product_Type__c</fullName>
        <label>Coupon Product Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inclusion</fullName>
                </value>
                <value>
                    <fullName>Exclusion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecom_Coupon_Type__c</fullName>
        <label>Coupon Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecom_Coupon__c</fullName>
        <label>Ecom Coupon</label>
        <referenceTo>Ecom_Coupon__c</referenceTo>
        <relationshipLabel>Ecom Coupon Products</relationshipLabel>
        <relationshipName>Ecom_Coupon_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ecom_Product_Cart_Amount__c</fullName>
        <label>Product Cart Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ecom_Product_Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ecom_Rule_Type__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>BOGO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecom_Source_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Ecom Coupon Products</relationshipLabel>
        <relationshipName>Ecom_Coupon_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ecom_Source_Quantity__c</fullName>
        <label>Source Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecom_Target_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Ecom Coupon Products (Target Product)</relationshipLabel>
        <relationshipName>Ecom_Coupon_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ecom_Target_Quantity__c</fullName>
        <label>Target Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ecom Coupon Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EPROD-{000000}</displayFormat>
        <label>Coupon Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ecom Coupon Products</pluralLabel>
    <recordTypes>
        <fullName>Default_Type</fullName>
        <active>true</active>
        <description>Default Record Type</description>
        <label>Default Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>